<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="login">Masuk Aplikasi</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="descriptionlogin">Masuk Aplikasi</string>
    <string name="nama">Nama</string>
    <string name="descriptionsignup">Daftar</string>
    <string name="sign_up">Daftar</string>
    <string name="descriptionwelcome">Selamat Datang di myStoy App. Silahkan Share Pengalaman anda disini.</string>
    <string name="selamatdatang">Selamat Datang kembali,</string>
    <string name="namauser">%1$s</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galery</string>
    <string name="upload">Unggah</string>
    <string name="descriptionaddcamera">Apa yang anda rasakan ?</string>
    <string name="send_story">KIRIM CERITA</string>
    <string name="name_user">Mochamad Muchsin Abdillah</string>
    <string name="date_story">01/01/2022</string>
    <string name="isi_deskripsi">Silahkan Masukan deskripsi.</string>

    <string name="warningemail">Masukkan Email</string>
    <string name="warningnama">Masukkan Nama Anda</string>
    <string name="warningpassword">Masukkan password</string>
    <string name="warningemailtidakvalid">Email tidak sesuai. Cek Kembali Email Anda.</string>
    <string name="warningpasswordkurang">Password Anda kurang Dari 6 Karakter.</string>
    <string name="pesandaftar">Pesan</string>
    <string name="loginberhasil">Login Berhasil !</string>
    <string name="ok">OK</string>
    <string name="pesanberhasildaftar">Daftar Berhasil. Silahkan Login Untuk Memulai Share Story Anda.</string>
    <string name="datakosong">DATA KOSONG</string>
    <string name="sendingdata">Please Wait…</string>
    <string name="formatemail">Format Email tidak Valid.</string>
    <string name="kesalahanaplikasi">Terjadi kesalahan pada aplikasi.</string>
    <string name="keluarapliksi">Apakah anda ingin keluar Aplikasi ?</string>
    <string name="YA">YA</string>
    <string name="TIDAK">TIDAK</string>
    <string name="memuatdata">Memuat Data…</string>
    <string name="gagalkeluar">Keluar Aplikasi dibatalkan.</string>
    <string name="gagalmunculkamera">Gagal memunculkan kamera.</string>
    <string name="gagalambilgambar">Gagal mengambil Gambar.</string>
    <string name="warningberkas">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="deskripsiphoto">Ini adalah deksripsi gambar</string>
    <string name="pilihphoto">Pilih Photo</string>
    <string name="permisioncamera">Tidak mendapatkan permission.</string>
    <string name="copyright">2022 @Diel</string>
    <string name="detailstory">Detail Story</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="timeout">Time Out</string>
    <string name="error_message">Login gagal</string>
    <string name="email_taken">Email Sudah ada</string>
    <string name="pesansuksesupload">Unggah Story berhasil.</string>
    <string name="warningdescription">Silahkan Masukan deskripsi.</string>
</resources>