<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailstory.DetailHistoryActivity">

    <ImageView
        android:id="@+id/iv_detail_photo_user"
        android:layout_width="42dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:transitionName="aminmasi_detailptouser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:transitionName="aminmasi_namauser"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_photo_user"
        app:layout_constraintTop_toTopOf="@+id/iv_detail_photo_user"
        tools:text="@string/name_user" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:text="@string/date_story"
        android:transitionName="aminmasi_date"
        app:layout_constraintBottom_toBottomOf="@+id/iv_detail_photo_user"
        app:layout_constraintStart_toEndOf="@+id/iv_detail_photo_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/isi_deskripsi"
        android:transitionName="aminmasi_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_date" />

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        android:transitionName="aminmasi_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/app_name"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

</androidx.constraintlayout.widget.ConstraintLayout>